[knewfilemenu] Don't forcibly change file extension

The code tries to 'fix' file extensions, but that may not be what the user wants

They expect the extension they typed to be used

This mechanism was originally introduced to fix cases where desktop files without .desktop extensions where misdetected as other files, but that is better fixed by always setting the .desktop extension

BUG: 456091